fix : path swag for Get experiences
